# cpp-project

C++/Uni/: CMakeLists.txt  course.cpp  course.h  main.cpp  student.cpp  student.h  teacher.cpp  teacher.h  university.cpp  university.h
