cmake_minimum_required(VERSION 3.16)

project(Uni LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Uni main.cpp
    student.h student.cpp
    teacher.h teacher.cpp
    course.h course.cpp
    university.h university.cpp)

include(GNUInstallDirs)
install(TARGETS Uni
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
